# LeanLine

./: JOURNAL.md  README.md
dashboard/: main.py
dashboard/core/: data_model.py  frame_parser.py  lap_timer.py
dashboard/ui/: gps_map_widget.py  telemetry_plot.py
firmware/: CMakeLists.txt
firmware/src/: main.cpp
firmware/src/core0/: gps_parser.cpp  gps_parser.h  imu_driver.cpp  imu_driver.h  sensor_fusion.cpp  sensor_fusion.h
firmware/src/core1/: logger.cpp  logger.h  ping_pong_buf.h
hardware/pcb/: pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch
hardware/pcb/bom/: ibom.html
hardware/pcb/production/: positions.csv
hardware/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
simulator/: gui_simulator.py
